--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "apollo-boost": "^0.4.9",
+    "apollo-client": "^2.6.10",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "graphql": "^15.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
