--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-calendar-picker": "^7.1.1",
     "react-native-elements": "^3.4.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-inline-edit": "^0.4.0",
