--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "@eva-design/eva": "^2.1.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^1.15.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "apollo-boost": "^0.4.9",
