adding tasks, tasks adding to game when new task, rendering game view

--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.23.0",
-    "graphql": "^15.5.0"
+    "graphql": "^15.5.0",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "eslint": "^7.25.0",
