--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,8 +1,11 @@
 {
     "env": {
+        "node":true,
         "browser": true,
         "es2021": true
     },
+    "parser":"babel-eslint",
+
     "extends": [
         "plugin:react/recommended",
         "airbnb"
