--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "apollo-server": "^2.23.0",
     "graphql": "^15.5.0",
+    "graphql-tools": "^4.0.8",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1"
   },
   "devDependencies": {
