--- a/.gitignore
+++ b/.gitignore
@@ -28,12 +28,18 @@ node_modules
 # Custom
 .expo
 client/.expo
-client/node-modules
-server/node-modules
+client/hello
+client/node_modules
+client/.env
+client/.expo-shared
+
+server/node_modules
+server/.env
 .expo-shared
 private
 build
 dist
+.env
 .env.local
 .env.development.local
 .env.test.local
