--- a/client/package.json
+++ b/client/package.json
@@ -10,20 +10,26 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "@eva-design/eva": "^2.1.0",
+    "@expo/vector-icons": "^12.0.5",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "^1.15.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "apollo-boost": "^0.4.9",
     "apollo-client": "^2.6.10",
+    "dotenv": "^10.0.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "fs": "*",
     "graphql": "^15.5.0",
     "moment": "^2.29.1",
+    "os": "^0.1.1",
+    "path": "^0.12.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-calendar-picker": "^7.1.1",
+    "react-native-dotenv": "^2.5.5",
     "react-native-elements": "^3.4.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-inline-edit": "^0.4.0",
@@ -31,7 +37,8 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-ui-kitten": "^4.4.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "rn-nodeify": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -43,5 +50,6 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0"
   },
-  "private": true
+  "private": true,
+  "postinstall": "node_modules/.bin/rn-nodeify --install fs --hack"
 }
